# cpproperty

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
src/: CMakeLists.txt
src/cpproperty/: HasOperator.hpp  PointerProperty.hpp  Property.hpp  cpproperty.hpp
tests/: CMakeLists.txt  Example.cpp
